# DEATHxRUST

./: .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  TEST_COMMANDS.md
.claude/Enhancements/: boosterrole-extensions-suite-enhancements.md  settings-roadmap-alignment-enhancements.md
.claude/commands/: ANALYZE-ROADMAP.md  COMMIT-AND-MERGE.md  COMMIT.md  IMPLEMENT.md  ISSUE-REPORT.md  NEW-FEATURE-REPORT.md  New-Feature-Roadmap-THINK-HARD.md  New-Feature-Roadmap-THINK-HARDEST.md  New-Feature-Roadmap.md  Troubleshoot.md
.claude/guidelines/: Command Development.md  rust-discord-bot-guidelines.md
.claude/roadmaps/: bleed_bot_commands.md  booster-role-command-suite-roadmap.md  booster-role-creation-roadmap.md  boosterrole-dominant-color-roadmap.md  (+8 more)
.grok/: README.md
config/: performance_baselines.json
data/: bot.db
scripts/: command_extractor.py  deploy.sh  generate_dynamic_report.sh  generate_report.sh  html_generator.py  test_persistence.py  universal_tester_v2.sh
src/: lib.rs  main.rs
src/bot/: data.rs  (+7 more)
test_configs/: commands.json
test_results/: automated_test_results_20250906_194908.json  automated_test_results_20250906_203826.json  command_executions.jsonl  dashboard_20250906_194929.html  dashboard_20250906_202120.html  dashboard_20250906_203850.html  discovered_commands.json  performance_metrics.json  report_20250906_214527.html  report_20250906_214807.html  report_20250906_215129.html  report_20250906_215209.html  report_20250906_215601.html  report_20250906_215652.html  test_data.db  test_fixed_encoding.html  test_report_20250906_192033.html  test_status.json  universal_test_status.json
tests/: config_tests.rs  test_boosterrole_commands.rs
(+117 files in other folders)
