[package]
default-run = "death-bot"
name = "death-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular Discord bot built with Rust and Serenity"
readme = "README.md"
license = "MIT"

[lib]
name = "death_bot"
path = "src/lib.rs"

[[bin]]
name = "death-bot"
path = "src/main.rs"

[[bin]]
name = "deploy_commands"
path = "src/bin/deploy_commands.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
palette = "0.7"
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"